fixed issue with align-items prop

--- a/index.css
+++ b/index.css
@@ -76,9 +76,9 @@ body {
 
 .game {
   width: 100%;
-  height: 90%;
+  height: 100%;
   display: flex;
-  align-items: top;
+  align-items: baseline;
   justify-content: center;
 }
 
